Initial Java 11 setup (#356); still need Spark compiled with Java 11 to get tests passing https://stackoverflow.com/questions/53583199/pyspark-error-unsupported-class-file-major-version-55